# jbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  backend.py  install.sh  main.py  pyproject.toml
qml/: Main.qml
src/: aliasesmodel.cpp  aliasesmodel.h  historymodel.cpp  historymodel.h  ipcserver.cpp  ipcserver.h  jsonstore.cpp  jsonstore.h  launcherbackend.cpp  launcherbackend.h  main.cpp  terminal.cpp  terminal.h  windowcontroller.cpp  windowcontroller.h
