[project]
name = "jbox"
version = "0.1.0"
description = "A minimal KDE-styled command launcher (a Linux 'Run' dialog)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "PySide6>=6.6,<7",
]

[project.scripts]
jbox = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py", "backend.py", "qml/*.qml"]

[tool.hatch.build.targets.wheel.force-include]
"qml" = "jbox/qml"
